--- a/src/popup.html
+++ b/src/popup.html
@@ -65,7 +65,7 @@
   </div>
 
   <script defer src="libraries/fontawesome/fontawesome-all.min.js"></script>
-  <script src="popup/scrape.js"></script>
+  <script src="popup/popup.js"></script>
 </body>
 
 </html>
