--- a/src/popup.html
+++ b/src/popup.html
@@ -13,59 +13,97 @@
 
 <body style="height: 585px; width:515px;">
   <div class="container pt-4">
-    <form>
-      <div class="form-group row">
-        <label for="css-selector" class="col-4 col-form-label">CSS Selector</label>
-        <div class="col-8">
-          <div class="input-group">
-            <div class="input-group-prepend">
-              <div class="input-group-text">
-                <i class="fas fa-asterisk"></i>
-              </div>
-            </div>
-            <input id="css-selector" name="text" type="text" class="form-control">
-          </div>
-        </div>
-      </div>
-      <div class="form-group row">
-        <label class="col-4">First or All</label>
-        <div class="col-8">
-          <div class="custom-control custom-radio custom-control-inline">
-            <input name="single-all" id="single-all_0" type="radio" class="custom-control-input" value="all" required="required">
-            <label for="single-all_0" class="custom-control-label">All</label>
-          </div>
-          <div class="custom-control custom-radio custom-control-inline">
-            <input name="single-all" id="single-all_1" type="radio" required="required" class="custom-control-input" value="first">
-            <label for="single-all_1" class="custom-control-label">First</label>
-          </div>
-        </div>
-      </div>
-      <div class="form-group row">
-        <div class="offset-4 col-8">
-          <button name="submit" type="submit" class="btn btn-primary" id="submit-scrape">Scrape!</button>
-        </div>
-      </div>
-    </form>
-    <div id="results-div" class="container">
-      <div class="row">
-        <div class="col">
-          <h3>Results</h3>
-        </div>
-        </div>
-    <div class="row">
-    <div class="col-10">
-      <textarea class="form-control" id="results" rows="10"></textarea>
-      </div>
-      <div class="col-2">
-      <button id="copy-results" class="btn btn-success" data-clipboard-target="#results">
-        <i class="fas fa-clipboard"></i>
-        </button>
-        </div>
-    </div>
-  </div>
 
-  <script defer src="libraries/fontawesome/fontawesome-all.min.js"></script>
-  <script src="popup/popup.js"></script>
+    <ul class="nav nav-tabs" id="scrapeTabs" role="tablist">
+      <li class="nav-item">
+        <a class="nav-link active" data-toggle="tab" role="tab" href="#tabContent1" id="1">Rows</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" data-toggle="tab" role="tab" href="#tabContent2" id="2">Cols</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" data-toggle="tab" role="tab" href="#tabContent3" id="3">Results</a>
+      </li>
+    </ul>
+
+    <div class="tab-content">
+      <!--Rows-->
+      <div class="tab-pane active" id="tabContent1">
+        <div class="form-group row">
+          <label for="row-selector" class="col-2 col-form-label">Row Selector</label>
+          <div class="col-6">
+            <input id="row-selector" name="row-selector" type="text" class="form-control" aria-describedby="row-selectorHelpBlock">
+            <span id="row-selectorHelpBlock" class="form-text text-muted">Represents one row on a spreadsheet</span>
+          </div>
+          <div class="col-2">
+          <button class="btn btn-primary">Save</button>
+        </div>
+        </div>
+      </div>
+      <!-- /Rows -->
+      <!-- Cols -->
+      <div class="tab-pane" id="tabContent2">
+        <div class="row pb-4">
+          <div class="col">
+            <ul class="list-group">
+              <li class="list-group-item d-flex justify-content-between align-items-center">
+                <span>Column : Selector</span>
+                <button class="btn btn-warning">Remove</button></li>
+
+            </ul>
+          </div>
+        </div>
+        <div class="d-flex justify-content-center">
+          <div class="col-3">
+            <input type="text" class="form-control" placeholder="Column Name">
+          </div>
+          <div class="col-3">
+            <input type="text" class="form-control" placeholder="Selector">
+          </div>
+          <div class="col-3">
+            <select class="form-control">
+              <option>Text</option>
+              <option>URL</option>
+            </select>
+          </div>
+          <div class="col-3">
+            <div class="btn-group" role="group">
+              <button type="button" class="btn btn-primary">Save</button>
+            </div>
+          </div>
+        </div>
+        <div class="container pt-4">
+          <div class="d-flex justify-content-center">
+          <h3>Ready?</h3>
+        </div>
+        <div class="d-flex justify-content-center">
+          <button class="btn btn-primary">Scrape!</button>
+        </div>
+        </div>
+      </div> <!-- /Cols -->
+      <!-- Results -->
+      <div class="tab-pane" id="tabContent3">
+        <div id="results-div" class="container">
+          <div class="row">
+            <div class="col">
+              <h3>Results</h3>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-10">
+              <textarea class="form-control" id="results" rows="10"></textarea>
+            </div>
+            <div class="col-2">
+              <button id="copy-results" class="btn btn-success" data-clipboard-target="#results">
+                <i class="fas fa-clipboard"></i>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- /Results -->
+      <script defer src="libraries/fontawesome/fontawesome-all.min.js"></script>
+      <script src="popup/popup.js"></script>
 </body>
 
 </html>
